terraform-aws-basics/gateways.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  depends_on = [
    aws_vpc.main
  ]
}
